# sourcecatcher-discord-scraper

./: Cargo.toml  sqlx-data.json
migrations/: 20230627231017_initial.sql
src/: main.rs
