[package]
name = "sourcecatcher-discord-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.4.1"
once_cell = "1.19.0"
rand = "0.9.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.113"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.6.3", features = ["offline", "sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.5"
twitter-syndication = { git = "https://github.com/evanc577/twitter-syndication.git" }
